added maven for javafx stuff