@@ -1,1 +1,6 @@
 # Schach
+
+
+
+
+"C:\Program Files\Java\jdk-12.0.2\bin\java.exe" --module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar Schach.jar
